# visio-schema

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  LICENSE  MASTER_PLAN.md  Makefile  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: ci.yml  launcher.yml  wheels.yml
cmake/: toolchain-rv1106-vendor.cmake
cpp/: CMakeLists.txt
cpp/include/visio/wire/: message.hpp
cpp/include/visio/wire/codec/: cobs.hpp  crc16.hpp  frame.hpp
cpp/include/visio_schema/mcap/: writer.hpp  writer_endpoint.hpp
cpp/include/visio_schema/routing/: channel.hpp  registry.hpp
cpp/include/visio_schema/transport/: endpoint.hpp  framed_fd.hpp  framed_outbox.hpp  framing.hpp  link.hpp  mcap_endpoint.hpp  message_inbox.hpp  queue.hpp  serial.hpp  serial_watchdog.hpp  tcp.hpp  wake_fd.hpp  write_policy.hpp
cpp/include/visio_schema/wire/: control.hpp  message.hpp  time.hpp
cpp/include/visio_schema/wire/codec/: cobs.hpp  crc16.hpp  frame.hpp
cpp/src/codec/: cobs.cc  crc16.cc  frame.cc
cpp/src/mcap/: writer.cc  writer_endpoint.cc
cpp/src/routing/: registry.cc
cpp/src/transport/: framed_fd.cc  framed_outbox.cc  framing.cc  link.cc  mcap_endpoint.cc  serial.cc  tcp.cc
cpp/tests/: active_object_test_util.hpp  test_backpressure.cc  test_calibration_nanopb.cc  test_channel_registry.cc  test_cobs.cc  test_crc16.cc  test_endpoint_reconnect.cc  test_frame_once.cc  test_frame_roundtrip.cc  test_framed_outbox.cc  test_golden_vectors.cc  test_io.cc  test_mcap_endpoint.cc  test_mcap_writer.cc  test_mcap_writer_endpoint.cc  test_message_inbox.cc  test_serial_watchdog.cc  test_tcp_io.cc  test_wake_fd.cc
docs/: foxglove_compat.md  framing.md  install.md  publishing.md  stream_type_map.md  timesync.md  timesync_client.md  usage.md  versioning.md
docs/protocol/: README.md  foxglove_compat.md  framing.md  stream_type_map.md  timesync.md  versioning.md
examples/: README.md
examples/cpp/: CMakeLists.txt  serial_consumer.cc
examples/python/: make_sample_mcap.py  requirements.txt  timesync_client.py  visio_display.py  visio_foxglove.py
packaging/: README.md  visio-display.spec  visio_launcher.py
proto/: nanopb.options
proto/visio/control/v1/: command.proto
proto/visio/geometry/v1/: twist.proto
proto/visio/input/v1/: quest_controller_state.proto
proto/visio/ros/geometry_msgs/v1/: quaternion.proto
proto/visio/sensor/v1/: audio_compressed.proto  button.proto  encoder_raw.proto  imu_raw.proto  system_health.proto
proto/visio/service/device_info/v1/: device_info.proto
proto/visio/service/heartbeat/v1/: heartbeat.proto
proto/visio/service/schema/v1/: schema.proto
proto/visio/service/timesync/v1/: timesync.proto
proto/visio/wire/v1/: header.proto
proto/visio_schema/calibration/v1/: imu.proto
proto/visio_schema/control/v1/: command.proto  command_result.proto
proto/visio_schema/geometry/v1/: twist.proto
proto/visio_schema/input/v1/: quest_controller_state.proto
proto/visio_schema/ros/geometry_msgs/v1/: quaternion.proto
proto/visio_schema/sensor/v1/: audio_compressed.proto  button.proto  encoder_raw.proto  imu_raw.proto  system_health.proto
proto/visio_schema/service/device_info/v1/: device_info.proto
proto/visio_schema/service/heartbeat/v1/: heartbeat.proto
proto/visio_schema/service/timesync/v1/: timesync.proto
proto/visio_schema/v1/calibration/: camera_tuning.proto  encoder.proto  imu.proto  tactile.proto
proto/visio_schema/v1/control/: command.proto  command_result.proto
proto/visio_schema/v1/geometry/: twist.proto
proto/visio_schema/v1/input/: quest_controller_state.proto
proto/visio_schema/v1/ros/geometry_msgs/: quaternion.proto
proto/visio_schema/v1/sensor/: audio_compressed.proto  button.proto  encoder_raw.proto  imu_raw.proto  system_health.proto  tactile_raw.proto
proto/visio_schema/v1/service/device_info/: device_info.proto
proto/visio_schema/v1/service/exposure_sync/: exposure_sync.proto
proto/visio_schema/v1/service/heartbeat/: heartbeat.proto
proto/visio_schema/v1/service/ota/: ota.proto
proto/visio_schema/v1/wire/: header.proto
proto/visio_schema/wire/v1/: header.proto
python/: MANIFEST.in  README.md  _vendor_native.py  conftest.py  pyproject.toml  setup.py
python/src/: creader.cc
python/tests/: conftest.py  test_breaking_waivers.py  test_calibration.py  test_channel_registry.py  test_cobs.py  test_crc16.py  test_example_mcap_roundtrip.py  test_example_timesync.py  test_extract_frames_parity.py  test_facade_helpers.py  test_frame_roundtrip.py  test_gen_schema_blobs.py  test_gen_stream_map.py  test_golden_vectors.py  test_io_disconnect.py  test_launcher.py  test_mcap_reader_endpoint.py  test_native_send.py  test_native_starvation.py  test_public_api.py  test_queue.py  test_recording.py  test_relay_registry.py  test_schema.py  test_serial_path.py  test_streams.py  test_visio_display.py  test_wire_reader.py
python/visio/wire/: message.py  streams.py
python/visio/wire/codec/: __init__.py  cobs.py  frame.py
python/visio_schema/: __init__.py  stream.py
python/visio_schema/display/: __init__.py  __main__.py  discovery.py  ego_layout.json  hand_geometry.py  relay_registry.py  scene_derivers.py  serve.py
python/visio_schema/display/static/: app.js  index.html
python/visio_schema/mcap/: __init__.py  reader.py  reader_endpoint.py  writer.py  writer_endpoint.py
python/visio_schema/routing/: __init__.py  channel.py  registry.py
python/visio_schema/transport/: __init__.py  endpoint.py  framed_fd.py  framing.py  link.py  mcap_endpoint.py  native_serial.py  queue.py  serial.py
python/visio_schema/wire/: control.py  message.py  schema.py  streams.py
python/visio_schema/wire/codec/: __init__.py  cobs.py  crc16.py  frame.py
scripts/: breaking_waivers.py  gen_schema_blobs.py  gen_stream_map.py
tests/: test_imports.py
tests/golden/: wire_vectors.txt
