[build-system]
# pybind11 is build-time only (header-only; no runtime dependency in the .so).
# The native `_creader` extension it builds is OPTIONAL — a missing compiler just
# falls back to the pure-Python reader (see setup.py / native_serial.py).
requires = ["setuptools>=68", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "visio-schema"
version = "0.2.0.dev0"
description = "Visio wire contract — generated protobuf bindings + the framing codec"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "GI Labs" }]
# The hand-written codec needs these at runtime; the generated bindings
# only need protobuf. One package, one dependency set.
dependencies = [
    "protobuf>=5.26",
    "cobs>=1.2",
]

[project.optional-dependencies]
# MCAP recording/replay (visio_schema.mcap) — the base stays protobuf+cobs.
recording = [
    "mcap>=1.1",
]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "mcap>=1.1",
]

# The wheel ships ONE `visio_schema` import root combining the hand-written
# codec modules and the generated bindings, both under python/visio_schema
# (`make gen` emits the bindings in-package). The generated foxglove.*
# bindings are relocated under visio_schema.foxglove so they don't collide
# with the official `foxglove` SDK package.
[tool.setuptools.packages.find]
where = ["."]
include = ["visio_schema*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: cross-boundary tests (serial/pty, cross-language)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

# Version-specific wheels (cp310–cp313), NOT abi3: the zero-copy Frame exports the
# buffer protocol, which the CPython Limited API lacks at the cp310 floor (PEP 688
# added it in 3.11, and fsglove runs 3.10). So we ship per-version wheels like the
# `cobs` dependency does. The native ext is optional; a build failure or a missing
# wheel falls back to the pure-Python reader.
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
build-frontend = "build"
test-requires = ["pytest>=8", "protobuf>=5.26", "cobs>=1.2", "mcap>=1.1"]
# Run the in-wheel suite native-on, then forced onto the pure-Python fallback, so
# both readers are exercised against the installed wheel.
test-command = "pytest {package}/tests -q && VISIO_NO_NATIVE=1 pytest {package}/tests -q"

[tool.cibuildwheel.linux]
archs = ["x86_64"]                       # the host fleet
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["universal2"]                    # one fat wheel (arm64 + x86_64)
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
